--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://localhost/sell?characterEncoding=utf-8&useSSL=false
+  jackson:
+    default-property-inclusion: non_null #如果有数据为null就不返回给前台
 jpa:
   show-sql: true
 
