--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,9 @@ jpa:
 server:
   context-path: /sell
 
-
+wechat:
+  mpAppId: wxd898fcb01713c658
+  mpAppSecret: 29d8a650db31472aa87800e3b0d739f2
 
 #https://gitee.com/search?search=weixin-sell&group_id=&project_id=&type=
 
