--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,11 @@
 			<artifactId>gson</artifactId>
 		</dependency>
 
-		<!--<dependency>-->
-			<!--<groupId>com.github.binarywang</groupId>-->
-			<!--<artifactId>weixin-java-mp</artifactId>-->
-			<!--<version>2.7.0</version>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>com.github.binarywang</groupId>
+			<artifactId>weixin-java-mp</artifactId>
+			<version>2.9.0</version>
+		</dependency>
 
 		<!--<dependency>-->
 			<!--<groupId>cn.springboot</groupId>-->
